♻️ :: List로 변경